--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:nanoatmega328new]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 build_src_filter =
 	-<**/*test*>
